Sat Mar 21 10:54:57 1998  Tom Tromey  <tromey@cygnus.com>

	* same-gnome.c (game_maybe_quit): New function.
	(game_quit_callback): Connect game_maybe_quit to "clicked" signal
	of messagebox.

Sun Mar  8 15:54:03 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (same_gnome_LDADD): Don't link with libsupport.a.

	* Makefile.am (INCLUDES): Added GNOME_INCLUDEDIR.

	* same-gnome.c (parse_an_arg): New function.
	(parse_args): Removed.
	(main): Use new gnome_init.  Create session manager client.
	(client_connect): Use previous id, not current one.
	(options): New structure
	(parser): New structure.
	(fname): New global.

1998-02-28  Arturo Espinosa <arturo@nuclecu.unam.mx>

        * same-gnome.c: Minor bug-fixes.

1998-02-28  Arturo Espinosa <arturo@nuclecu.unam.mx>

        * same-gnome.c: We are now using PNGs instead of XPM.
                        Now using GNOME_APP_UI's for the menus.
                        Fix: Preferences menu now remembers scenario in use.
                        Changing scenario doesn't start a new game.
                        Using as much STOCK elements as possible.
                        Other look fixes.

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* same-gnome.c (main): Added app_id "same-gnome".

1998-02-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* same-gnome.c: Wheeee!  Same-gnome is now imlib-ified.  I still
	have to figure a way to handle the clip masks in a proper way.
	Hmmm.  Maybe we should define an extra configuration option for a
	window background?

	* same-gnome.c (client_connect): Changed name from connect to
	client_connect to avoid collision with connect(2).

	* Makefile.am (same_gnome_LDADD): Added -lgdk_imlib to the list of
	libraries.

Mon Feb 16 19:59:47 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* Makefile.am (INCLUDES): Define GNOMELOCALEDIR.

	* same-gnome.c (main): Add bindtextdomain().

1998-02-15  Raja R Harinath  <harinath@cs.umn.edu>
